JSAI/error/src/test/resources/base/array_a001.js
var arr = [2,3,5,"hello", "world", true];
var arr_str = arr.join(",")
print(arr_str);
var arr5 = arr["5"];
print(arr5);

